[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/tools/graph_panels/cell_panel.gd" type="Script" id=1]
[ext_resource path="res://scenes/tools/graph_panels/notebook.gd" type="Script" id=2]
[ext_resource path="res://scenes/tools/graph_panels/icons/menuList.png" type="Texture" id=3]
[ext_resource path="res://scenes/tools/graph_panels/icons/plus.png" type="Texture" id=4]
[ext_resource path="res://scenes/tools/graph_panels/icons/cross.png" type="Texture" id=5]
[ext_resource path="res://scenes/tools/graph_panels/icons/return.png" type="Texture" id=6]
[ext_resource path="res://scenes/tools/tree_view.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/tools/tree_generator.gd" type="Script" id=8]
[ext_resource path="res://scenes/tools/graph_panels/web_api.gd" type="Script" id=9]

[sub_resource type="StyleBoxFlat" id=10]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0, 0.0352941, 0, 0.870588 )
draw_center = true
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0666667, 0.384314, 0, 1 )
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border", "Border Width", "Corner Radius" ]

[sub_resource type="StyleBoxFlat" id=11]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.854902, 0.862745, 0, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[sub_resource type="StyleBoxEmpty" id=12]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=13]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[node name="notebook" type="TabContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 86.0
margin_right = 512.0
margin_bottom = 407.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 100, 5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
focus_mode = 1
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/tab_fg = SubResource( 10 )
custom_styles/tab_bg = SubResource( 10 )
custom_styles/panel = SubResource( 10 )
custom_constants/hseparation = 4
custom_constants/top_margin = 1
tab_align = 1
tabs_visible = false
drag_to_rearrange_enabled = false
script = ExtResource( 1 )
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Margin", "Mouse", "Rect", "Size Flags", "Visibility", "custom_colors", "custom_constants", "custom_styles", "custom_styles/tab_bg", "script" ]
default_notebook = null

[node name="Notebook" type="ScrollContainer" parent="."]
editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = -1.0
rect_min_size = Vector2( 420, 260 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
scroll_horizontal_enabled = false
scroll_horizontal = 0
scroll_vertical_enabled = true
scroll_vertical = 0
scroll_deadzone = 0
_sections_unfolded = [ "Mouse", "Rect", "Scroll" ]

[node name="vbox" type="VBoxContainer" parent="Notebook"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 510.0
margin_bottom = 319.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 1
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 0
_sections_unfolded = [ "Focus", "Mouse", "Size Flags" ]

[node name="cells" type="VBoxContainer" parent="Notebook/vbox"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 510.0
margin_bottom = 319.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
_sections_unfolded = [ "Mouse", "Rect", "Size Flags", "Visibility" ]

[node name="HSeparator" type="HSeparator" parent="Notebook/vbox/cells"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 157.0
margin_right = 510.0
margin_bottom = 161.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/separator = SubResource( 11 )
_sections_unfolded = [ "custom_styles", "custom_styles/separator" ]

[node name="Settings" type="MarginContainer" parent="."]
editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = -1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
_sections_unfolded = [ "Grow Direction", "Rect", "Size Flags", "Visibility", "custom_constants", "custom_styles", "custom_styles/panel", "script" ]

[node name="cell" type="VBoxContainer" parent="Settings"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 510.0
margin_bottom = 319.0
rect_min_size = Vector2( 426, 200 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="MarginContainer" type="VBoxContainer" parent="Settings/cell"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 510.0
margin_bottom = 51.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Label" type="Label" parent="Settings/cell/MarginContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 510.0
margin_bottom = 13.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Local Notebook File Path:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Grow Direction", "Rect", "Size Flags" ]

[node name="menu2" type="HBoxContainer" parent="Settings/cell/MarginContainer"]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 21.0
margin_right = 511.0
margin_bottom = 47.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 0
_sections_unfolded = [ "Grow Direction", "Rect", "Size Flags" ]

[node name="select" type="Button" parent="Settings/cell/MarginContainer/menu2"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 63.0
margin_bottom = 26.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Load"
icon = ExtResource( 3 )
flat = false
align = 1

[node name="add" type="Button" parent="Settings/cell/MarginContainer/menu2"]
self_modulate = Color( 0.619608, 1, 0.552941, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 67.0
margin_right = 128.0
margin_bottom = 26.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "New"
icon = ExtResource( 4 )
flat = true
align = 1
_sections_unfolded = [ "Rect", "Size Flags", "Visibility", "icon" ]

[node name="delete" type="Button" parent="Settings/cell/MarginContainer/menu2"]
modulate = Color( 1, 0.541176, 0.541176, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 132.0
margin_right = 205.0
margin_bottom = 26.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Delete"
icon = ExtResource( 5 )
flat = true
align = 1
_sections_unfolded = [ "Grow Direction", "Size Flags", "Visibility", "icon" ]

[node name="clear" type="Button" parent="Settings/cell/MarginContainer/menu2"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 209.0
margin_right = 274.0
margin_bottom = 26.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Clear"
icon = ExtResource( 6 )
flat = true
align = 1
_sections_unfolded = [ "Grow Direction", "Size Flags", "Visibility", "icon" ]

[node name="notebook_path" type="HBoxContainer" parent="Settings/cell/MarginContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 17.0
margin_right = 510.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 1
_sections_unfolded = [ "Grow Direction", "Size Flags" ]

[node name="path" type="LineEdit" parent="Settings/cell/MarginContainer/notebook_path"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 510.0
margin_bottom = 15.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 3
size_flags_vertical = 1
text = "/home/shady/darknebulae_project/experimental/graphtool/GraphBook.ipynb"
editable = false
secret_character = "*"
expand_to_text_length = true
focus_mode = 2
context_menu_enabled = true
clear_button_enabled = false
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Size Flags", "custom_styles" ]

[node name="menu3" type="HBoxContainer" parent="Settings/cell/MarginContainer"]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 52.0
margin_right = 511.0
margin_bottom = 78.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 1
_sections_unfolded = [ "Grow Direction", "Size Flags" ]

[node name="select" type="Button" parent="Settings/cell/MarginContainer/menu3"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 37.0
margin_right = 100.0
margin_bottom = 26.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Load"
icon = ExtResource( 3 )
flat = false
align = 1

[node name="VSeparator3" type="VSeparator" parent="Settings/cell/MarginContainer/menu3"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 104.0
margin_right = 108.0
margin_bottom = 26.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
_sections_unfolded = [ "Size Flags" ]

[node name="add" type="Button" parent="Settings/cell/MarginContainer/menu3"]
self_modulate = Color( 0.619608, 1, 0.552941, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 112.0
margin_right = 173.0
margin_bottom = 26.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "New"
icon = ExtResource( 4 )
flat = true
align = 1
_sections_unfolded = [ "Rect", "Size Flags", "Visibility", "icon" ]

[node name="Label" type="Label" parent="Settings/cell/MarginContainer/menu3"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 177.0
margin_top = 4.0
margin_right = 328.0
margin_bottom = 21.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Local Notebook File Path:"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="delete" type="Button" parent="Settings/cell/MarginContainer/menu3"]
modulate = Color( 1, 0.541176, 0.541176, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 332.0
margin_right = 405.0
margin_bottom = 26.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Delete"
icon = ExtResource( 5 )
flat = true
align = 1
_sections_unfolded = [ "Grow Direction", "Size Flags", "Visibility", "icon" ]

[node name="clear" type="Button" parent="Settings/cell/MarginContainer/menu3"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 409.0
margin_right = 474.0
margin_bottom = 26.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Clear"
icon = ExtResource( 6 )
flat = true
align = 1
_sections_unfolded = [ "Grow Direction", "Size Flags", "Visibility", "icon" ]

[node name="jupyter_path" type="HBoxContainer" parent="Settings/cell/MarginContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 36.0
margin_right = 510.0
margin_bottom = 51.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 1
_sections_unfolded = [ "Grow Direction", "Size Flags" ]

[node name="path" type="LineEdit" parent="Settings/cell/MarginContainer/jupyter_path"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 510.0
margin_bottom = 15.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 3
size_flags_vertical = 1
text = "/home/shady/darknebulae_project/experimental/graphtool/GraphBook.ipynb"
editable = false
secret_character = "*"
focus_mode = 2
context_menu_enabled = true
clear_button_enabled = false
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Size Flags", "custom_styles" ]

[node name="tree" type="Tree" parent="Settings/cell" instance=ExtResource( 7 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 55.0
margin_right = 510.0
margin_bottom = 175.0
rect_min_size = Vector2( 426, 120 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/bg_focus = SubResource( 12 )
custom_styles/bg = SubResource( 13 )
columns = 1
allow_reselect = false
allow_rmb_select = false
hide_folding = false
hide_root = false
drop_mode_flags = 3
select_mode = 1
script = ExtResource( 8 )
_sections_unfolded = [ "Anchor", "Custom Colors", "Custom Constants", "Custom Fonts", "Custom Icons", "Custom Styles", "Focus", "Hint", "Margin", "Mouse", "Rect", "Size Flags", "Theme", "custom_colors", "custom_styles", "custom_styles/bg", "custom_styles/bg_focus" ]

[node name="output" type="RichTextLabel" parent="Settings/cell/tree"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 145.0
margin_right = 426.0
margin_bottom = 245.0
rect_min_size = Vector2( 426, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = ""
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Grow Direction", "Rect", "Size Flags", "Theme", "custom_colors", "custom_constants", "custom_fonts", "custom_styles", "custom_styles/focus" ]

[node name="web_api" type="MarginContainer" parent="Settings"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 510.0
margin_bottom = 319.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 9 )
_sections_unfolded = [ "Anchor", "Margin", "Size Flags" ]

[connection signal="button_up" from="Settings/cell/MarginContainer/menu2/add" to="." method="_on_add_cell"]
[connection signal="button_up" from="Settings/cell/MarginContainer/menu2/clear" to="." method="_on_clear_cell"]
[connection signal="button_up" from="Settings/cell/MarginContainer/menu3/add" to="." method="_on_add_cell"]
[connection signal="button_up" from="Settings/cell/MarginContainer/menu3/clear" to="." method="_on_clear_cell"]
[connection signal="item_activated" from="Settings/cell/tree" to="Settings/cell/tree" method="_on_tree_item_activated"]
[connection signal="visibility_changed" from="Settings/cell/tree" to="Settings/cell/tree" method="_on_tree_visibility_changed"]
